Fix Vercel configuration for static HTML site

--- a/vercel.json
+++ b/vercel.json
@@ -1,63 +1,23 @@
 {
   "version": 2,
-  "routes": [
-    {
-      "src": "/",
-      "dest": "/index.html"
-    },
-    {
-      "src": "/ver/(.*)",
-      "dest": "/ver/$1.html"
-    },
-    {
-      "src": "/([^/]+)",
-      "dest": "/$1.html"
-    },
-    {
-      "src": "/([^/]+)/([^/]+)",
-      "dest": "/$1/$2.html"
-    },
-    {
-      "src": "/([^/]+)/([^/]+)/([^/]+)",
-      "dest": "/$1/$2/$3.html"
-    },
-    {
-      "src": "/([^/]+)/([^/]+)/([^/]+)/([^/]+)",
-      "dest": "/$1/$2/$3/$4.html"
-    },
-    {
-      "src": "/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)",
-      "dest": "/$1/$2/$3/$4/$5.html"
-    },
-    {
-      "src": "/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)",
-      "dest": "/$1/$2/$3/$4/$5/$6.html"
-    },
-    {
-      "src": "/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)",
-      "dest": "/$1/$2/$3/$4/$5/$6/$7.html"
-    },
-    {
-      "src": "/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)",
-      "dest": "/$1/$2/$3/$4/$5/$6/$7/$8.html"
-    },
-    {
-      "src": "/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)",
-      "dest": "/$1/$2/$3/$4/$5/$6/$7/$8/$9.html"
-    },
-    {
-      "src": "/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)/([^/]+)",
-      "dest": "/$1/$2/$3/$4/$5/$6/$7/$8/$9/$10.html"
-    }
-  ],
+  "buildCommand": null,
+  "outputDirectory": ".",
   "rewrites": [
     {
-      "source": "/index.html",
-      "destination": "/"
+      "source": "/",
+      "destination": "/index.html"
     },
     {
-      "source": "/([^/]+)\\.html",
-      "destination": "/$1"
+      "source": "/ver/(.*)",
+      "destination": "/ver/$1.html"
+    },
+    {
+      "source": "/([^/]+)",
+      "destination": "/$1.html"
+    },
+    {
+      "source": "/([^/]+)/([^/]+)",
+      "destination": "/$1/$2.html"
     }
   ],
   "headers": [
